Fix: dark mode bg color

--- a/styles/mainstyle.css
+++ b/styles/mainstyle.css
@@ -15,14 +15,14 @@
 @media (prefers-color-theme: dark) {
 	:root {
 		--text-color: #ffffff;
-		--bg-color: #2c2c2c;
+		--bg-color: #17212B;
 	}
 }
 
 @media (color-scheme: dark) {
 	:root {
 		--text-color: #ffffff;
-		--bg-color: #2c2c2c;
+		--bg-color: #17212B;
 	}
 }
 
